--- a/experiencias/public/css/estilos.css
+++ b/experiencias/public/css/estilos.css
@@ -6,12 +6,12 @@
 
 body{
 	background: #E0E4E5;
-	font-family: 'Open Sans', sans-serif;
+	/* font-family: 'Open Sans', sans-serif; */
 }
 
 .wrap{
 	max-width: 1100px;
-	width: 90%;
+	/* width: 90%; */
 	margin: auto;
 }
 
@@ -39,13 +39,13 @@ body{
 
 .category_list{
 	display: flex;
-	flex-direction: column;
+	flex-direction: row-reverse;
 	width: 18%;
 }
 
 .category_list .category_item{
 	display: block;
-	width: 90%;
+	/* width: 90%; */
 	padding: 15px 0;
 	margin-bottom: 20px;
 	background: #E84C3D;
@@ -69,7 +69,7 @@ body{
 
 
 .products-list .product-item{
-	width: 22%;
+	width: 30%;
 	margin-left: 3%;
 	margin-bottom: 25px;
 	box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.22);
@@ -90,9 +90,9 @@ body{
 	display: block;
 	width: 100%;
 	padding: 8px 0;
-	background: #2D3E50;
+	/* background: #2D3E50; */
 
-	color: #fff;
+	color:black;
 	text-align: center;
 	text-decoration: none;
 }
