--- a/experiencias/public/css/estilos.css
+++ b/experiencias/public/css/estilos.css
@@ -170,7 +170,14 @@ h1 {
 	.products-list{
 		width: 100%;
 	}
-
+	.h6, h6 {
+		font-size: 1.2vw;
+	}
+	h2 {
+		
+		font-size: 1.5em;
+		
+	}
 	.category_list{
 		flex-direction: row;
 		justify-content: space-between;
@@ -191,6 +198,30 @@ h1 {
 	}
 }
 
+
+@media screen and (max-width: 768px) and (min-width:700px){
+	.carousel-caption-slider{
+		position: absolute!important;
+		bottom: -15px!important;
+		left: 21%!important;
+		z-index: 10!important;
+		padding-top: 0px!important;
+		padding-bottom: 0px!important;
+		color: #fff!important;
+		text-align: center!important;
+	}
+a {
+	font-size: calc(0.325rem + 0.9vw);
+}
+.width-75 {
+    width: 45px!important;
+    height: 35px!important;
+}
+.btn-xs {
+    font-size: 10px;
+    padding: 0px 7px;
+}
+}
 @media screen and (max-width: 700px){
 	.category_list{
 		flex-direction: column;
@@ -198,6 +229,10 @@ h1 {
 	.category_list .category_item{
 		/* width: 100%; */
 		margin-bottom: 10px;
+	}
+	.width-75 {
+		width: 45px!important;
+		height: 35px!important;
 	}
 }
 
